# data-ingestion-service

./: .gitignore  README.md  config.yaml  demo.py  pyproject.toml  report.html
data/: demo_input.json  sample.csv  sample.json
reports/: data_quality_report.html
src/data_ingestion_service/: __init__.py
src/data_ingestion_service.egg-info/: PKG-INFO  SOURCES.txt
src/ingestion/: __main__.py  cli.py  config.py  db.py  ingest.py  models.py  reporting.py  validation.py
tests/: conftest.py  test_cli.py  test_data_generator.py  test_db.py  test_ingest.py  test_reporting.py  test_validation.py
