[project]
name = "data-ingestion-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ben-gould", email = "bengould95@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
